templates/templates/kiss/matchbox.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matchbox
  namespace: kiss
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      name: matchbox
  template:
    metadata:
      labels:
        name: matchbox
    spec:
      nodeName: netai-cloud-compute-6
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: matchbox
          image: quay.io/poseidon/matchbox:latest
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /
              port: 8080
          resources:
            requests:
              cpu: 30m
              memory: 20Mi
            limits:
              cpu: 50m
              memory: 50Mi
          volumeMounts:
            - name: assets
              mountPath: /var/lib/matchbox/assets
            - name: boot
              mountPath: /var/lib/matchbox/assets/boot
            - name: groups
              mountPath: /var/lib/matchbox/groups
            - name: ignition
              mountPath: /var/lib/matchbox/ignition
            - name: profiles
              mountPath: /var/lib/matchbox/profiles
      volumes:
        - name: assets
          emptyDir: {}
        - name: boot
          configMap:
            name: matchbox-boot
            defaultMode: 0400
        - name: groups
          configMap:
            name: matchbox-groups
            defaultMode: 0400
        - name: ignition
          emptyDir: {}
        - name: ignition-raw
          configMap:
            name: matchbox-ignition
            defaultMode: 0400
        - name: profiles
          configMap:
            name: matchbox-profiles
            defaultMode: 0400
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: matchbox
  namespace: kiss
spec:
  type: ClusterIP
  selector:
    name: matchbox
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matchbox
  namespace: kiss
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: matchbox.kiss-cluster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: matchbox
                port:
                  number: 80
